# aptos-utils

./: Cargo.toml  README.md  env-example
batch-trasfer-move/: Move.toml
batch-trasfer-move/sources/: transfer.move
src/: account.rs  aptos.rs  bluemove.rs  cli.rs  db.rs  keys  log.rs  main.rs  souffl3.rs  utils.rs
