[package]
name = "aptos-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "testnet" }
url = "2.3.1"
tokio = { version = "1.21.2", features = ["full"] }
rand_core = "0.5.1"
rand = "0.7.3"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
once_cell = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.22"
